--- a/template/req.html
+++ b/template/req.html
@@ -27,9 +27,9 @@
 <body>
     <nav>
         <div class="nleft">
-            <a href="https://t.me/TheMovieProviderBot">
+            <a href="https://t.me/Movieflicksk_bot">
                 <!-- if u are trying to change the header name please remove the title text from bottom line  -->
-                <h4 id="heading" style="z-index: 100;" class="magnet">MOVIE PROVIDER</h4>
+                <h4 id="heading" style="z-index: 100;" class="magnet">MOVIEFLICKSBOT</h4>
             </a>
         </div>
         <div class="nryt">
@@ -99,22 +99,22 @@
                         <div class="abt-sec" id="sec2">
                             <h1>OUR ALL <span>CHANNELS</span> LIST</h1>
                             <div class="links chnl-link">
-                                <a class="magnet" href="https://t.me/HP_MOVIES_WORLD"><button>HP MOVIES 
+                                <a class="magnet" href="https://t.me/Mws_Files"><button>HP MOVIES 
                                         WORLD</button></a>
-                                <a class="magnet" href="https://t.me/MoviesLinkSearchBot2"><button>MOVIE SEARCH 
+                                <a class="magnet" href="https://t.me/Movieflicksk_bot"><button>MOVIE SEARCH 
                                         BOT²</button></a>
-                                <a class="magnet" href="https://t.me/MoviesLinkSearchBot3"><button>MOVIE SEARCH 
+                                <a class="magnet" href="https://t.me/+beNn3crI7083Nzg9"><button>MOVIE SEARCH 
                                         BOT³</button></a>
-                                <a class="magnet" href="https://t.me/HpMovieReqest"><button>MOVIE REQUEST 
+                                <a class="magnet" href="https://t.me/MwsMovieReq_bot"><button>MOVIE REQUEST 
                                         GROUP</button></a>
-                                <a class="magnet" href="https://t.me/+_mQHFKrbsiQyOTQ1"><button>HP REQUEST 
+                                <a class="magnet" href="https://t.me/+beNn3crI7083Nzg9"><button>HP REQUEST 
                                         LOGS</button></a>
                             </div>
                         </div>
                         <div class="abt-sec" id="sec3">
                             <h1>OUR ALL <span>BOTS</span> LIST</h1>
                             <div class="links bot-link">
-                                <a class="magnet" href="https://t.me/TheMovieProviderBot"><button>THE MOVIE
+                                <a class="magnet" href="https://t.me/Movieflicksk_bot"><button>Movieflickskbot 
                                         PROVIDER</button></a>
                             </div>
                         </div>
@@ -125,7 +125,7 @@
                             <p style="text-align: center;">YOU CAN <Span>TALK</Span> WITH US FOR YOUR <Span>SUPPORT</Span> AND YOU CAN <Span>REPORT</Span> THROUGH
                                 TELEGRAM</p>
                             <div class="links contact">
-                                <a href="https://t.me/HpRequestBot"><button>CONTACT US</button></a>
+                                <a href="https://t.me/MwsMovieReq_bot"><button>CONTACT US</button></a>
                             </div>
                         </div>
                     </div>
@@ -164,7 +164,7 @@
                     <a href="https://t.me/bisal_Files"><i class="fa-brands fa-telegram fa-lg"></i></a>
                 </div>
                 <h4 style="font-weight: 700;">This Page Is Designed By <a
-                        href="https://t.me/DeletedFromEarth"><span>HP</span></a></h4>
+                        href="https://t.me/MovieFlicks_Admin_bot"><span>HP</span></a></h4>
             </div>
         </footer>
 </body>
