--- a/template/dl.html
+++ b/template/dl.html
@@ -27,9 +27,9 @@
 <body>
     <nav>
         <div class="nleft">
-            <a href="https://t.me/TheMovieProviderBot">
+            <a href="https://t.me/Movieflicksk_bot">
                 <!-- if u are trying to change the header name please remove the title text from bottom line  -->
-                <h4 id="heading" style="z-index: 100;" class="magnet">MOVIE PROVIDER</h4>
+                <h4 id="heading" style="z-index: 100;" class="magnet">MOVIE FLICKS </h4>
             </a>
         </div>
         <div class="nryt">
@@ -125,7 +125,7 @@
                             <p style="text-align: center;">YOU CAN <Span>TALK</Span> WITH US FOR YOUR <Span>SUPPORT</Span> AND YOU CAN <Span>REPORT</Span> THROUGH
                                 TELEGRAM</p>
                             <div class="links contact">
-                                <a href="https://t.me/HpRequestBot"><button>CONTACT US</button></a>
+                                <a href="https://t.me/MwsMovieReq_bot"><button>CONTACT US</button></a>
                             </div>
                         </div>
                     </div>
@@ -164,7 +164,7 @@
                     <a href="https://t.me/bisal_Files"><i class="fa-brands fa-telegram fa-lg"></i></a>
                 </div>
                 <h4 style="font-weight: 700;">This Page Is Designed By <a
-                        href="https://t.me/DeletedFromEarth"><span>HP</span></a></h4>
+                        href="https://t.me/MovieFlicks_Admin_bot"><span>HP</span></a></h4>
             </div>
         </footer>
 </body>
