--- a/template/dl.html
+++ b/template/dl.html
@@ -99,23 +99,23 @@
                         <div class="abt-sec" id="sec2">
                             <h1>OUR ALL <span>CHANNELS</span> LIST</h1>
                             <div class="links chnl-link">
-                                <a class="magnet" href="https://t.me/HP_MOVIES_WORLD"><button>HP MOVIES 
+                                <a class="magnet" href="https://t.me/https://t.me/Mws_Files"><button>Mws MOVIES 
                                         WORLD</button></a>
-                                <a class="magnet" href="https://t.me/MoviesLinkSearchBot2"><button>MOVIE SEARCH 
+                                <a class="magnet" href="https://t.me/Movieflicksk_bot"><button>MOVIE SEARCH 
                                         BOT²</button></a>
-                                <a class="magnet" href="https://t.me/MoviesLinkSearchBot3"><button>MOVIE SEARCH 
+                                <a class="magnet" href="https://t.me/Movieflicksk_bot"><button>MOVIE SEARCH 
                                         BOT³</button></a>
-                                <a class="magnet" href="https://t.me/HpMovieReqest"><button>MOVIE REQUEST 
+                                <a class="magnet" href="https://t.me/MwsMovieReq_bot"><button>MOVIE REQUEST 
                                         GROUP</button></a>
-                                <a class="magnet" href="https://t.me/+_mQHFKrbsiQyOTQ1"><button>HP REQUEST 
+                                <a class="magnet" href="https://t.me/+gAOAWKXypzk3MThl"><button>SR REQUEST 
                                         LOGS</button></a>
                             </div>
                         </div>
                         <div class="abt-sec" id="sec3">
                             <h1>OUR ALL <span>BOTS</span> LIST</h1>
                             <div class="links bot-link">
-                                <a class="magnet" href="https://t.me/TheMovieProviderBot"><button>THE MOVIE
-                                        PROVIDER</button></a>
+                                <a class="magnet" href="https://t.me/Movieflicksk_bot"><button>MOVIE FLICKS
+                                        BOT</button></a>
                             </div>
                         </div>
                         <div class="abt-sec" id="sec4">
